minigu/parser/tests/snapshots/opengql/insert.snap
---
source: minigu/parser/tests/parser_test.rs
---
Err:
  Unexpected:
    input: "INSERT (:Person { firstname: 'Firstname', lastname: 'Lastname', joined: DATE '2023-01-01' })\n        -[:MEMBER_SINCE { since: \"2023-03-20\" }]->\n        (:Team { name: 'Teamname' })\n"
    span:
      start: 0
      end: 6
    position:
      - 1
      - 1
